[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/gameover/GameOver.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/customfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://audio/game_over.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sprites/menu/BG.png" type="Texture" id=4]
[ext_resource path="res://audio/menu_confirm.ogg" type="AudioStream" id=5]
[ext_resource path="res://audio/menu_select.ogg" type="AudioStream" id=6]
[ext_resource path="res://scenes/gameover/GameOverStream.gd" type="Script" id=7]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_neighbour_bottom = NodePath("StartButton")
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 960, 540 )
rotation = 1.5729
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 400.0
margin_top = 276.0
margin_right = 688.0
margin_bottom = 308.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = ExtResource( 2 )
text = "GAME OVER"

[node name="StartButton" type="Button" parent="."]
margin_left = 740.0
margin_top = 720.0
margin_right = 976.0
margin_bottom = 768.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 2 )
text = "RESTART"
flat = true

[node name="MenuSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="MenuConfirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="GameOverStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 4.0
script = ExtResource( 7 )

[connection signal="focus_entered" from="StartButton" to="." method="_on_StartButton_focus_entered"]
[connection signal="mouse_entered" from="StartButton" to="." method="_on_StartButton_mouse_entered"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
